--- a/.github/workflows/deploy-nuget.yaml
+++ b/.github/workflows/deploy-nuget.yaml
@@ -22,16 +22,18 @@ jobs:
         uses: actions/setup-dotnet@v1      
         with:
           dotnet-version: 6.0.x
-      - name: Create output directory
-        run: |
-         mkdir -p ${{env.PROJECT_NAME}}
-         mkdir ${{env.PROJECT_NAME}}/out
+      #- name: Create output directory
+      #  run: |
+      #   mkdir -p ${{env.PROJECT_NAME}}
+      #   mkdir ${{env.PROJECT_NAME}}/out
 
       - name: Build solution and generate NuGet package
         run: |  
           cd ${{env.PROJECT_NAME}}
-          dotnet pack -c Release -o out  
+          dotnet build TemplatePack.csproj
+          dotnet pack TemplatePack.csproj
+          #dotnet pack -c Release -o out  
 
       - name: Push generated package to GitHub registry
         run:
-          dotnet nuget push ${GITHUB_WORKSPACE}/${{env.PROJECT_NAME}}/out/*.nupkg --source https://api.nuget.org/v3/index.json --skip-duplicate --api-key ${{secrets.BEIS_GITHUB_TOKEN}}
+          dotnet nuget push ${GITHUB_WORKSPACE}/$(OutputPath)/*.nupkg --source https://api.nuget.org/v3/index.json --skip-duplicate --api-key ${{secrets.BEIS_GITHUB_TOKEN}}
