--- a/.github/workflows/deploy-nuget.yaml
+++ b/.github/workflows/deploy-nuget.yaml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Build solution and generate NuGet package
         run: |  
-          cd ${{env.PROJECT_NAME}}
+          #cd ${{env.PROJECT_NAME}}
           dotnet build TemplatePack.csproj
           dotnet pack TemplatePack.csproj
           #dotnet pack -c Release -o out  
