--- a/.github/workflows/deploy-nuget.yaml
+++ b/.github/workflows/deploy-nuget.yaml
@@ -31,9 +31,9 @@ jobs:
         run: |  
           #cd ${{env.PROJECT_NAME}}
           dotnet build TemplatePack.csproj
-          dotnet pack TemplatePack.csproj
+          dotnet pack -c Release -o out TemplatePack.csproj
           #dotnet pack -c Release -o out  
 
       - name: Push generated package to GitHub registry
         run:
-          dotnet nuget push ${GITHUB_WORKSPACE}/$(OutputPath)/*.nupkg --source https://api.nuget.org/v3/index.json --skip-duplicate --api-key ${{secrets.BEIS_GITHUB_TOKEN}}
+          dotnet nuget push ${GITHUB_WORKSPACE}/out/*.nupkg --source https://api.nuget.org/v3/index.json --skip-duplicate --api-key ${{secrets.BEIS_GITHUB_TOKEN}}
