--- a/Beis.RegisterYourInterest/Beis.RegisterYourInterest.csproj
+++ b/Beis.RegisterYourInterest/Beis.RegisterYourInterest.csproj
@@ -19,7 +19,7 @@
 
   <ItemGroup>
 	  <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
-	  <PackageReference Include="Beis.Common" Version="6.0.2" />
+	  <PackageReference Include="Beis.Common" Version="6.0.3-ci.1" />
 	  <PackageReference Include="DataAnnotationsExtensions" Version="5.0.1.27" />
 	  <PackageReference Include="FluentAssertions" Version="6.7.0" />
 	  <!--<PackageReference Include="Beis.Common" Version="6.0.2-declarative-entities.14" />-->
