--- a/Beis.RegisterYourInterest/appsettings.json
+++ b/Beis.RegisterYourInterest/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ApplyEntityFrameworkMigrationsAtStartup": false,
+  "ApplyEntityFrameworkMigrationsAtStartup": true,
   "CookieNamesConfiguration": {
     "essential": {
       "CookieAcceptedCookie": "CookieAccepted",
